--- a/activiting/package.json
+++ b/activiting/package.json
@@ -8,7 +8,8 @@
     "react-dom": "^16.6.3",
     "react-responsive": "^6.0.1",
     "react-responsive-carousel": "^3.1.43",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "react-tag-input": "^6.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
