--- a/activiting/package.json
+++ b/activiting/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "faker": "^4.1.0",
+    "node-sass": "^4.10.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-masonry-component": "^6.2.1",
     "react-responsive": "^6.0.1",
     "react-responsive-carousel": "^3.1.43",
     "react-scripts": "2.1.1",
