--- a/Login/package.json
+++ b/Login/package.json
@@ -4,8 +4,10 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^6.2.0",
     "koa": "^2.6.2",
     "koa-router": "^7.4.0",
+    "mongoose": "^5.4.0",
     "nodemon": "^1.18.9"
   },
   "scripts": {
